# esp_ble_lvgl_control

./: README.md
ble_hid_device_control/main/: ble_hidd_demo_main.c
ble_lvgl_device/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old
ble_lvgl_device/components/button/include/: button.h
ble_lvgl_device/components/button/src/: bsp_button.c  button.c
ble_lvgl_device/components/lvgl_esp32_drivers/: lvgl_helpers.c  lvgl_helpers.h
ble_lvgl_device/components/lvgl_esp32_drivers/lvgl_tft/: esp_lcd_backlight.c  esp_lcd_backlight.h
ble_lvgl_device/main/: CMakeLists.txt  app_main.c  app_main.h  ble_hidd_main.c  ble_hidd_main.h  component.mk
ble_lvgl_device/main/ble_app/: esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_dev.h  hid_device_le_prf.c  hidd_le_prf_int.h
ble_lvgl_device/main/lv_ui/: app_ui.c  app_ui.h  lv_port_indev.c  lv_port_indev.h
ble_lvgl_device/main/lv_ui/img/: ui_img_armhour_png.c  ui_img_armminute_png.c  ui_img_armsecond_png.c  ui_img_back_40_png.c  ui_img_back_70_png.c  ui_img_bg_png.c  ui_img_board_png.c  ui_img_buletooth_png.c  ui_img_clock_png.c  ui_img_daily_png.c  ui_img_hightaudio50_png.c  ui_img_hightspeaker70_png.c  ui_img_lowvolume50_png.c  ui_img_lowvolume70_png.c  ui_img_m_background_png.c  ui_img_m_hour_png.c  ui_img_m_min_png.c  ui_img_m_music_png.c  ui_img_m_sec_png.c  ui_img_menu_40_png.c  ui_img_next_70_png.c  ui_img_play_70_png.c  ui_img_ppt_down_png.c  ui_img_ppt_esc_png.c  ui_img_ppt_start_png.c  ui_img_ppt_up_png.c  ui_img_speech_png.c  ui_img_stop_70_png.c  ui_img_time_png.c  ui_img_tool_png.c  ui_img_watchface240_png.c  ui_img_wifi_png.c
